--- a/bundle/pipelines/Elementary Model Validation.yml
+++ b/bundle/pipelines/Elementary Model Validation.yml
@@ -47,12 +47,13 @@ script: |-
   exit $dbt_test_exit_code
 data_components:
 - dbt
-- Warehouse
-- matatika
 - dbt-test-results
+- matatika
+- elementary
+- notebook
+- sendgrid
 properties:
   notebook.path: notebook/data_quality_report.ipynb
   sendgrid.body: email_template.html
   sendgrid.title: Daily Data Quality Report
   sendgrid.content_type: text/html
-
