--- a/bundle/pipelines/Elementary Model Validation.yml
+++ b/bundle/pipelines/Elementary Model Validation.yml
@@ -14,6 +14,8 @@ script: |-
 
   meltano invoke dbt deps
 
+  meltano invoke dbt run --select elementary
+
   #  disable pipeline fail on non 0 exit code for dbt test
   # save exit code
   # re-enable pipeline fail on non 0 exit code
